# rusty_raytracing

./: Cargo.toml  image.ppm
saved_images/: book2_low.ppm  checker_on_checker.ppm  earth_texture.ppm  perlin_sphere.ppm  quads.ppm  simple_lights.ppm  smoky_cornell.ppm  sweet_nap.ppm
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  hittable_list.rs  image_loader.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs  utils.rs  vec3.rs
